# EVA-generator

./: .gitignore  Copy of Copy of SI Version of EVA v2 3 1-2007 with AD Test.xlsm  EVA.txt  EVA_Extrapolated_N2000_Report.csv  Extreme Value Analysis - Part 1 Fundamentals for MechanicalIntegrity Applications.md  PVP2006-ICPVT11-93702.md  README.md  eva_alignment_report.md  implementation_plan.md  test_dataset_wall_loss.csv  walkthrough.md
backend/: .gitignore  package.json  prisma.config.ts
backend/prisma/: schema.prisma
backend/src/: app.module.ts  check_run_details.ts  inspect_db_latest.ts  list_runs.ts  main.ts  populate_row_counts.ts
backend/src/modules/assets/: assets.controller.ts  assets.service.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/modules/datasets/: datasets.module.ts  (+2 more)
backend/src/prisma/: prisma.service.ts
eva-engine/: .gitignore  AGENTS.md  main.py  pyproject.toml  requirements.txt  test_engine.py
eva-engine/app/: config.py
eva-engine/app/api/: analyze.py  health.py
eva-engine/app/models/: schemas.py
eva-engine/app/services/: eva_service.py
eva-engine/app/statistics/: __init__.py  bootstrap.py  diagnostics.py  distributions.py  mle.py  plotting.py  preprocessing.py  return_levels.py
frontend/: .gitignore  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Sidebar.tsx
frontend/lib/: api.ts
frontend/lib/context/: AuthContext.tsx
(+14 files in other folders)
