[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-engine"
version = "1.0.0"
description = "Extreme Value Analysis engine for corrosion & reliability engineering"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "matplotlib>=3.7.5",
    "plotly>=5.22.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]